src/test/deca/context/invalid/minus_op_arith.deca
//Test pour minus

//Resultat: invalid type for arithmetique operation string

{
    int x = 0;
    string y = "";
    x-y ; 
}